deployment/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-api-stg
  namespace: stg-api
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql-api-stg
