deployment/nodejsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-stg
  namespace: stg-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: nodejs-api-stg
